frontend/test/should_fail/computations_decl_use_returns_type_mismatch_006.grg
using model_init;

procedure proc(var d:double) : (int)
{
	return(d);
}

